--- a/Tabbar_/TG_Room_Cell_0.xib
+++ b/Tabbar_/TG_Room_Cell_0.xib
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="TG_Room_Cell_0" rowHeight="168" id="A2j-Pn-1Qw" customClass="TG_Room_Cell_N" customModule="HearThis" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="TG_Room_Cell_0" rowHeight="168" id="A2j-Pn-1Qw" customClass="TG_Room_Cell_N" customModule="MeBook" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="168"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="A2j-Pn-1Qw" id="u3d-QL-GpC">
@@ -18,13 +18,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" tag="22" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FSu-2x-Pw1">
-                        <rect key="frame" x="8" y="0.0" width="0.0" height="37"/>
+                        <rect key="frame" x="16" y="0.0" width="0.0" height="37"/>
                         <constraints>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" id="AnP-ds-KEV"/>
                             <constraint firstAttribute="height" constant="37" id="hwP-ZQ-Dch"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
-                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="textColor" red="0.0078431372550000003" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="gom-Vd-Ca8">
@@ -41,14 +41,16 @@
                             <outlet property="delegate" destination="A2j-Pn-1Qw" id="mTC-6L-Xtm"/>
                         </connections>
                     </collectionView>
-                    <button opaque="NO" alpha="0.0" tag="12" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="szO-ZB-roc">
-                        <rect key="frame" x="233" y="0.0" width="79" height="37"/>
+                    <button opaque="NO" alpha="0.0" tag="12" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="szO-ZB-roc">
+                        <rect key="frame" x="224" y="0.0" width="88" height="37"/>
                         <constraints>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="46" id="Oib-4X-jPY"/>
                             <constraint firstAttribute="height" constant="37" id="sYt-ZF-5A9"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
-                        <state key="normal" title="XEM THÊM"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                        <state key="normal" title="xem thêm" image="ico_aright">
+                            <color key="titleColor" red="0.0078431372550000003" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
+                        </state>
                     </button>
                 </subviews>
                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -56,7 +58,7 @@
                     <constraint firstItem="FSu-2x-Pw1" firstAttribute="top" secondItem="u3d-QL-GpC" secondAttribute="top" id="31a-29-Sgt"/>
                     <constraint firstAttribute="trailing" secondItem="gom-Vd-Ca8" secondAttribute="trailing" constant="10" id="6rR-Tj-7tk"/>
                     <constraint firstItem="gom-Vd-Ca8" firstAttribute="leading" secondItem="u3d-QL-GpC" secondAttribute="leading" constant="10" id="8hJ-Cq-Hbf"/>
-                    <constraint firstItem="FSu-2x-Pw1" firstAttribute="leading" secondItem="u3d-QL-GpC" secondAttribute="leading" constant="8" id="EXd-aJ-sGJ"/>
+                    <constraint firstItem="FSu-2x-Pw1" firstAttribute="leading" secondItem="u3d-QL-GpC" secondAttribute="leading" constant="16" id="EXd-aJ-sGJ"/>
                     <constraint firstItem="gom-Vd-Ca8" firstAttribute="top" secondItem="FSu-2x-Pw1" secondAttribute="bottom" constant="1" id="XLx-CV-MTv"/>
                     <constraint firstItem="szO-ZB-roc" firstAttribute="top" secondItem="u3d-QL-GpC" secondAttribute="top" id="ize-Qv-hPA"/>
                     <constraint firstAttribute="bottom" secondItem="gom-Vd-Ca8" secondAttribute="bottom" constant="1.5" id="jNL-G4-gcV"/>
@@ -72,4 +74,7 @@
             <point key="canvasLocation" x="25" y="122"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="ico_aright" width="17" height="34.5"/>
+    </resources>
 </document>
