--- a/Tabbar_/TG_Room_Cell_7.xib
+++ b/Tabbar_/TG_Room_Cell_7.xib
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="TG_Room_Cell_7" rowHeight="168" id="KGk-i7-Jjw" customClass="TG_Room_Cell_N" customModule="HearThis" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="TG_Room_Cell_7" rowHeight="168" id="KGk-i7-Jjw" customClass="TG_Room_Cell_N" customModule="MeBook" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="168"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -18,13 +18,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tNz-iS-CxL">
-                        <rect key="frame" x="8" y="0.0" width="0.0" height="37"/>
+                        <rect key="frame" x="16" y="0.0" width="0.0" height="37"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="37" id="Nv7-e3-9xD"/>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" id="mPd-8V-gL7"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
-                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                        <color key="textColor" red="0.0078431372550000003" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="DZx-Sf-dS4">
@@ -41,20 +41,22 @@
                             <outlet property="delegate" destination="KGk-i7-Jjw" id="Wtu-uF-bTx"/>
                         </connections>
                     </collectionView>
-                    <button opaque="NO" alpha="0.0" tag="12" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ipz-09-kIs">
-                        <rect key="frame" x="233" y="0.0" width="79" height="37"/>
+                    <button opaque="NO" alpha="0.0" tag="12" contentMode="scaleToFill" semanticContentAttribute="forceRightToLeft" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ipz-09-kIs">
+                        <rect key="frame" x="215" y="0.0" width="97" height="37"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="37" id="H21-wl-oWg"/>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="46" id="mGv-pP-8Ld"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
-                        <state key="normal" title="XEM THÊM"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                        <state key="normal" title="XEM THÊM" image="ico_aright">
+                            <color key="titleColor" red="0.0078431372550000003" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
+                        </state>
                     </button>
                 </subviews>
                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="DZx-Sf-dS4" secondAttribute="trailing" constant="10" id="4Do-W3-QgN"/>
-                    <constraint firstItem="tNz-iS-CxL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="4Qe-kY-qvP"/>
+                    <constraint firstItem="tNz-iS-CxL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="4Qe-kY-qvP"/>
                     <constraint firstItem="DZx-Sf-dS4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="7m7-EM-tca"/>
                     <constraint firstAttribute="trailing" secondItem="ipz-09-kIs" secondAttribute="trailing" constant="8" id="EVi-Pv-li1"/>
                     <constraint firstItem="tNz-iS-CxL" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="P82-6n-xPX"/>
@@ -72,4 +74,7 @@
             <point key="canvasLocation" x="25" y="122"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="ico_aright" width="17" height="34.5"/>
+    </resources>
 </document>
