--- a/Tabbar_/First_Tab_ViewController.xib
+++ b/Tabbar_/First_Tab_ViewController.xib
@@ -5,12 +5,12 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="First_Tab_ViewController" customModule="MeBook" customModuleProvider="target">
             <connections>
+                <outlet property="login_bg_height" destination="TdY-Ze-5ia" id="P9h-th-2B0"/>
                 <outlet property="tableView" destination="JxR-HW-6v5" id="uBb-3h-age"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -20,6 +20,12 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_login-1" translatesAutoresizingMaskIntoConstraints="NO" id="88W-zO-w4d">
+                    <rect key="frame" x="0.0" y="224" width="320" height="344"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="344" id="TdY-Ze-5ia"/>
+                    </constraints>
+                </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kFS-mh-T3b">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
                     <subviews>
@@ -69,7 +75,7 @@
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="JxR-HW-6v5" customClass="OwnTableView" customModule="MeBook" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="64" width="320" height="504"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="cup-Hb-3Wn"/>
                         <outlet property="delegate" destination="-1" id="R9n-qv-Vwd"/>
@@ -77,29 +83,25 @@
                 </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.85490196080000003" green="0.89411764709999997" blue="0.89411764709999997" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="JxR-HW-6v5" firstAttribute="top" secondItem="kFS-mh-T3b" secondAttribute="bottom" id="BU7-FH-Xlp"/>
+                <constraint firstItem="88W-zO-w4d" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="BlW-r7-SuF"/>
                 <constraint firstItem="kFS-mh-T3b" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="Lgt-1G-HUW"/>
                 <constraint firstItem="JxR-HW-6v5" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="N4j-QO-zTn"/>
                 <constraint firstItem="JxR-HW-6v5" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="OcB-Of-qjC"/>
                 <constraint firstItem="JxR-HW-6v5" firstAttribute="bottom" secondItem="Q5M-cg-NOt" secondAttribute="bottom" id="XgE-nQ-dOU"/>
+                <constraint firstItem="88W-zO-w4d" firstAttribute="bottom" secondItem="Q5M-cg-NOt" secondAttribute="bottom" id="azK-7k-XHi"/>
+                <constraint firstItem="88W-zO-w4d" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="h1W-2C-Sf6"/>
                 <constraint firstItem="kFS-mh-T3b" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="sVx-k2-EqX"/>
                 <constraint firstItem="kFS-mh-T3b" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="zUo-lv-Klz"/>
             </constraints>
             <point key="canvasLocation" x="138.75" y="115.14084507042254"/>
         </view>
     </objects>
-    <designables>
-        <designable name="JxR-HW-6v5">
-            <size key="intrinsicContentSize" width="320" height="828"/>
-        </designable>
-    </designables>
     <resources>
+        <image name="bg_login-1" width="266.5" height="136.5"/>
         <image name="ic_search" width="50.5" height="50.5"/>
         <image name="ico_menu" width="33" height="32"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
