--- a/Tabbar_/TG_Room_Cell_3.xib
+++ b/Tabbar_/TG_Room_Cell_3.xib
@@ -48,7 +48,9 @@
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="46" id="mGv-pP-8Ld"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
-                        <state key="normal" title="xem thêm" image="ico_aright"/>
+                        <state key="normal" title="xem thêm" image="ico_aright">
+                            <color key="titleColor" red="0.0078431372550000003" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
+                        </state>
                     </button>
                 </subviews>
                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
